<resources>
    <string name="network_not_available">网络不可用，请检查网络设置</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="click_again_to_exit">再按一次退出程序</string>
    <string name="share_entry">分享</string>
    <string name="price">价格</string>
    <string name="sign_list">签名列表</string>
    <string name="sign_notice">个人使用,伪造他人签名属违法行为</string>
    <string name="start_imitate">开始临摹</string>
    <string name="watch_video">观看教程</string>
    <string name="designer_designing">设计师正在设计中……</string>
    <string name="complete_before_deadline">%1$s前完成设计</string>
    <string name="video_designing">教程设计中</string>
    <string name="want_video">我要教程</string>
    <string name="save_fail">签名图片保存失败.</string>
    <string name="save_success">图片已下载，请在图库中查看</string>
    <string name="save">保存到本地</string>
    <string name="restart_download">重新下载</string>
    <string name="download">下载</string>
    <string name="download_state_finish">已下载</string>
    <string name="download_state_wait">等待下载</string>
    <string name="download_state_start">开始下载</string>
    <string name="download_state_fail">下载失败</string>
    <string name="download_state_stop">下载停止</string>
    <string name="belong_to_expert_sign">从属类别:专家签名</string>
    <string name="result">结果</string>
    <string name="design_script">设计稿</string>
    <string name="video_script">视频教程</string>
    <string name="sale_price">优惠价格</string>
    <string name="time">时间</string>
    <string name="name">姓名</string>
    <string name="please_input_your_name">请输入您的尊姓大名</string>
    <string name="necessary_symbol">*</string>
    <string name="request">要求</string>
    <string name="pay_method">支付方式</string>
    <string name="alipay">支付宝</string>
    <string name="requirement_hint">请说明您的附加要求</string>
    <string name="head_coupon">优惠券</string>
    <string name="total">合计:</string>
    <string name="price_tag">价格</string>
    <string name="action_pay">支付</string>
    <string name="net_error_info">亲，加载失败了;检查下网络试试呗(´ω`)</string>
    <string name="retry">重试加载</string>
    <string name="tip_get_price_failed">获取价格信息失败</string>
    <string name="input_english_name">请输入您的英文名</string>
    <string name="input_name">请输入您的尊姓大名</string>
    <string name="pay_cancel">支付被取消了T_T,只要支付完成就可以获得专业的签名了，再试一次！</string>
    <string name="pay_failed">付款没有成功T_T，只要支付完成就可以获得专业的签名了，再试一次！</string>
    <string name="designer_introduction">设计师简介</string>
    <string name="design_process">设计流程</string>
    <string name="expert_sign_process_1">选择你喜欢的签名类型</string>
    <string name="expert_sign_process_2">付款，设计师收到通知</string>
    <string name="expert_sign_process_3">设计师设计</string>
    <string name="expert_sign_process_4">进入专家签名或账号查收签名</string>
    <string name="sign_example_video">签名示例教程</string>
    <string name="i_want_sign">我要设计</string>
    <string name="user_login">登录</string>
    <string name="register_login">注册登录</string>
    <string name="auth_code_tip_wait">请等待验证码短信&#8230;</string>
    <string name="tip_wrong_number">手机号码格式有误,请校验手机号码</string>
    <string name="auth_code_tip_empty_number">号码不能为空,请重新输入</string>
    <string name="user_phone">手机号</string>
    <string name="hint_input_phone_number">请输入您的手机号</string>
    <string name="identify_code">验证码</string>
    <string name="input_identify_code">请输入验证码</string>
    <string name="get_identify_code">获取验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="register_desc">亲，注册后，我们将会为您终身保存签名的相关资料</string>
    <string name="auth_code_cannot_be_empty">验证码不能为空</string>
    <string name="auth_code_send">"验证码已经发送"</string>
    <string name="error_auth_code">验证码错误</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="start_sign">开始签名</string>
    <string name="unit_second">s</string>
    <string name="select_en_name">选择英文名</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="expert_sign">专家签名</string>
</resources>
