<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <RelativeLayout
            android:id="@+id/rl_expert_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:text="@string/designer_introduction"
                android:textSize="@dimen/ts_normal_big" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:src="@drawable/icon_step_next" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide"
            android:background="@color/gray11" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/tools"
                android:id="@+id/sdv_preview"
                android:layout_width="100dp"
                android:layout_height="112dp"
                android:layout_centerVertical="true"
                android:background="@drawable/loading"
                fresco:placeholderImage="@drawable/loading_fresco" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/sdv_preview"
                android:layout_toRightOf="@+id/sdv_preview"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_name_gray"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_name_gray"
                    android:gravity="center_vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="@dimen/ts_normal_big" />

                <TextView
                    android:id="@+id/tv_term"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_term_gray"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_term_gray"
                    android:gravity="center_vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="@dimen/ts_normal" />

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_desc_gray"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_desc_gray"
                    android:gravity="center_vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="@dimen/ts_normal" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/design_process"
            android:textSize="@dimen/ts_normal_big" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide"
            android:background="@color/gray11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_step_one_gray"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/icon_step_one_gray"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/expert_sign_process_1"
            android:textSize="@dimen/ts_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_step_two_gray"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/icon_step_two_gray"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/expert_sign_process_2"
            android:textSize="@dimen/ts_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_step_three_gray"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/icon_step_three_gray"
            android:gravity="center_vertical"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/expert_sign_process_3"
            android:textSize="@dimen/ts_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_step_four_gray"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/icon_step_four_gray"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/expert_sign_process_4"
            android:textSize="@dimen/ts_normal" />
    </LinearLayout>
</RelativeLayout>